Feature: 네펜데스와 슬러지웨이브 생성완

--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -293,6 +293,7 @@
     <ClInclude Include="..\Header\SilkWorm.h" />
     <ClInclude Include="..\Header\SkyBox.h" />
     <ClInclude Include="..\Header\SludgeBall.h" />
+    <ClInclude Include="..\Header\SludgeWave.h" />
     <ClInclude Include="..\Header\SpitCactus.h" />
     <ClInclude Include="..\Header\SunGollem.h" />
     <ClInclude Include="..\Header\Terrain.h" />
@@ -434,6 +435,7 @@
     <ClCompile Include="..\Code\SilkWorm.cpp" />
     <ClCompile Include="..\Code\SkyBox.cpp" />
     <ClCompile Include="..\Code\SludgeBall.cpp" />
+    <ClCompile Include="..\Code\SludgeWave.cpp" />
     <ClCompile Include="..\Code\SpitCactus.cpp" />
     <ClCompile Include="..\Code\SunGollem.cpp" />
     <ClCompile Include="..\Code\Terrain.cpp" />
