--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -286,6 +286,12 @@
     <Filter Include="02. GameObject\06. FieldObj\08. LightFlower">
       <UniqueIdentifier>{adf39711-a4bb-40bd-b116-2444dc92f3ec}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. GameObject\09. EnvironmentObj\00. NearReactObj\01. NearReactMushroom">
+      <UniqueIdentifier>{2d0158ed-9def-4f25-94e7-b80909e1332d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\11. Item\00.TestItem">
+      <UniqueIdentifier>{955c9596-02e2-4d1c-ae3d-5f01fb5d1391}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\MainApp.h">
@@ -635,6 +641,15 @@
     </ClInclude>
     <ClInclude Include="..\Header\Bullet.h" />
     <ClInclude Include="JellyPool.h" />
+    <ClInclude Include="..\Header\NearReactMushroom.h">
+      <Filter>02. GameObject\09. EnvironmentObj\00. NearReactObj\01. NearReactMushroom</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\EtcItem.h">
+      <Filter>02. GameObject\11. Item\00.TestItem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\UseItem.h">
+      <Filter>02. GameObject\11. Item\00.TestItem</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -968,6 +983,15 @@
       <Filter>02. GameObject\14. Tile</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\Bullet.cpp" />
+    <ClCompile Include="..\Code\NearReactMushroom.cpp">
+      <Filter>02. GameObject\09. EnvironmentObj\00. NearReactObj\01. NearReactMushroom</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\EtcItem.cpp">
+      <Filter>02. GameObject\11. Item\00.TestItem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\UseItem.cpp">
+      <Filter>02. GameObject\11. Item\00.TestItem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Client.ico">
